--- a/final/force-app/main/default/aura/modalForCar/modalForCar.cmp
+++ b/final/force-app/main/default/aura/modalForCar/modalForCar.cmp
@@ -9,7 +9,8 @@
       onclick="{! c.openModel }"
     />
     <!-- <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" onclick="{!c.openModel}" /> -->
-    <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" onclick="{!c.openModel}" />
+    <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" onclick="{!c.openModel}" class="title-car-img" />
+    <div class="bottom-price">{!v.car.CurrencyIsoCode} {!v.car.UnitPrice}</div>
     <aura:if isTrue="{!v.isModalOpen}"> 
       <section
         role="dialog"
@@ -43,7 +44,8 @@
             <p>{!v.car.Product2.Family}</p>
             <p>{!v.car.Product2.Description}</p>
             <p>{!v.car.Product2.Equipment__c}</p>
-            <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" />
+            <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" class="title-car-img" />
+            <div class="bottom-price">{!v.car.UnitPrice}</div>
           </div>
           <footer class="slds-modal__footer">
             <lightning:button
