--- a/final/force-app/main/default/aura/productList/productList.cmp
+++ b/final/force-app/main/default/aura/productList/productList.cmp
@@ -1,17 +1,24 @@
-<aura:component
-  controller="LadaCarController"
-  implements="forceCommunity:availableForAllPageTypes"
->
+<aura:component controller="LadaCarController"
+  implements="forceCommunity:availableForAllPageTypes">
   <aura:attribute name="cars" type="PricebookEntry[]" />
+  <aura:attribute name="slideNumber" type="Integer" default="0"/>
   <aura:handler name="init" action="{!c.doInit}" value="{!this}" />
   <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" />
   <h1>Lada Car Gallery</h1>
   <div class="container">
-    <aura:iteration items="{!v.cars}" var="car">
-      <lightning:layout multipleRows="true" class="layoutBigCardsColumn">
+    <aura:iteration items="{!v.cars}" var="car" >
+      <div aura:id="{!car.Id}" id="{!car.Id}" class="slides">
+        <c:product car="{!car}"/>
+      </div>
+      <!-- <lightning:layout multipleRows="true" class="layoutBigCardsColumn">
         <c:product car="{!car}" />
-      </lightning:layout>
+      </lightning:layout> -->
     </aura:iteration>
+    <a class="prev" onclick="{!c.slideMinus}">&#10094;</a>
+    <a class="next" onclick="{!c.slidePlus}">&#10095;</a>
+    <div class="caption-container">
+      <p id="caption">Scroll left/right</p>
+    </div>
   </div> 
 </aura:component>
  
