--- a/final/force-app/main/default/aura/modalForCar/modalForCar.css
+++ b/final/force-app/main/default/aura/modalForCar/modalForCar.css
@@ -30,31 +30,21 @@ div.slds-m-around_xx-large.cModalForCar button:hover {
 
 div.slds-m-around_xx-large.cModalForCar img {
   width: 100%;
-  height: auto;
-}
-
-div.slds-m-around_xx-large.cModalForCar 
- section.slds-modal.slds-fade-in-open div.slds-modal__container 
- div#modal-content-id-1.slds-modal__content.slds-p-around_medium img {
-   
- }
-
- @font-face {
-  font-family: myFirstFont;
-  src: url(https://fonts.google.com/specimen/Lobster#standard-styles);
+  height: 100%;
+  max-width: 1110px;
+  max-height: 590px;
 }
 
 div.slds-m-around_xx-large.cModalForCar div.bottom-price {
   position: absolute;
-  bottom: 8px;
-  right: 16px;
-  font-size: 16px;
-  color:black;
-  font-family: myFirstFont;
+  bottom: 35px;
+  right: 15px;
+  font-size: 58px;
+  color: #939393;
 }
 
 div.slds-m-around_xx-large.cModalForCar div.bottom-price:hover {
-  background-color: azure;
+  background-color: rgba(240, 255, 255, 0.31);
 }
 
 @keyframes wiggle {
@@ -78,6 +68,16 @@ div.slds-m-around_xx-large.cModalForCar div.bottom-price:hover {
   }
   40%, 100% {
     transform: rotateZ(0);
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  /* For mobile phones: */
+  div.slds-m-around_xx-large.cModalForCar img {
+    width: 100%;
+    height: 100%;
+    max-width: 815px;
+    max-height: 410px;
   }
 }
 
