--- a/final/force-app/main/default/aura/productList/productList.cmp
+++ b/final/force-app/main/default/aura/productList/productList.cmp
@@ -1,15 +1,17 @@
 <aura:component controller="LadaCarController"
   implements="forceCommunity:availableForAllPageTypes">
-  <aura:attribute name="cars" type="PricebookEntry[]" />
+  <aura:attribute name="cars" type="Object[]" />
   <aura:attribute name="slideNumber" type="Integer" default="0"/>
   <aura:handler name="init" action="{!c.doInit}" value="{!this}" />
   <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" />
   <h1>Lada Car Gallery</h1>
   <div class="container">
     <aura:iteration items="{!v.cars}" var="car" >
-      <div aura:id="{!car.Id}" id="{!car.Id}" class="slides">
+      <!-- <div aura:id="{!car.Id}" id="{!car.Id}" class="slides"> -->
+      <aura:if isTrue="{! car.slideNumber==v.slideNumber}">  
         <c:product car="{!car}"/>
-      </div>
+      </aura:if>
+      <!-- </div> -->
       <!-- <lightning:layout multipleRows="true" class="layoutBigCardsColumn">
         <c:product car="{!car}" />
       </lightning:layout> -->
