--- a/final/force-app/main/default/aura/header/header.cmp
+++ b/final/force-app/main/default/aura/header/header.cmp
@@ -1,5 +1,6 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
   <aura:registerEvent name="cmpEvent" type="c:ComponentEvent" />
+  <aura:registerEvent name="currencyChangeEvent" type="c:CurrChangeEvent" />
   <aura:attribute name="currency" type="String" default="USD"/>
   <aura:attribute name="currentPage" type="String" default="home" />
   <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
