--- a/final/force-app/main/default/aura/productList/productList.cmp
+++ b/final/force-app/main/default/aura/productList/productList.cmp
@@ -2,6 +2,8 @@
   implements="forceCommunity:availableForAllPageTypes">
   <aura:attribute name="cars" type="Object[]" />
   <aura:attribute name="slideNumber" type="Integer" default="0"/>
+  <aura:attribute name="currency" type="String" default="USD"/>
+  <aura:handler event="c:currChangeEvent" action="{!c.handleCapture}"/>
   <aura:handler name="init" action="{!c.doInit}" value="{!this}" />
   <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" />
   <h1>Lada Car Gallery</h1>
